@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.93.2.10 2002/01/28 19:10:25 mike Exp $"
+ * "$Id: printers.c,v 1.93.2.11 2002/01/29 03:10:22 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -1676,7 +1676,7 @@ StopPrinter(printer_t *p)	/* I - Printer to stop */
     * Stop it...
     */
 
-    StopJob(job->id);
+    StopJob(job->id, 0);
 
    /*
     * Reset the state to pending...
@@ -2011,5 +2011,5 @@ write_irix_state(printer_t *p)	/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.93.2.10 2002/01/28 19:10:25 mike Exp $".
+ * End of "$Id: printers.c,v 1.93.2.11 2002/01/29 03:10:22 mike Exp $".
  */
